[package]
name = "mule-macho"
version = "0.1.0"
edition = "2024"

[lib]
name = "macho"

[[bin]]
name = "mmacho"
patch = "src/bin/mmacho/main.rs"
required-features = ["mmacho"]

[features]
mmacho = ["dep:serde-lexpr"]

[dependencies]
serde = { version = "1.0.219", features = ["derive"] }
serde-lexpr = { version = "0.1.3", optional = true }
