[package]
name = "mule-macho"
version = "0.1.0"
edition = "2024"

[lib]
name = "macho"

[[bin]]
name = "mmacho"
patch = "src/bin/mmacho/main.rs"
required-features = ["mmacho"]

[features]
mmacho = ["dep:clap", "dep:serde-lexpr", "dep:serde_json"]

[dependencies]
serde = { version = "1.0.219", features = ["derive"] }
serde-lexpr = { version = "0.1.3", optional = true }
serde_json = { version = "1.0.140", optional = true }
clap = { version = "4.5.40", optional = true, features = ["derive"] }
